z-index fix

--- a/src/assets/styles/_temp.scss
+++ b/src/assets/styles/_temp.scss
@@ -2,6 +2,9 @@
 md-sidenav-layout[fullscreen] {
   position: absolute !important;
   padding-top: 64px;
+  &.md-sidenav-opened {
+    z-index: 1;
+  }
 }
 
 .md-button-ripple {
